--- a/deployment.yml
+++ b/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: <acr-name>.azurecr.io/nginx:v1
+        image: kubeacr0071.azurecr.io/nginx:v1
         ports:
         - containerPort: 80
